Ignore unused files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ __pycache__
 
 data
 data_partial
+media/recordings
+trained_models/deploy.prototxt.txt
+trained_models/res10_300x300_ssd_iter_140000.caffemodel
+trained_models/shape_predictor_68_face_landmarks.dat
 
 logs
 debug.log
