--- a/env_eyetracker.yml
+++ b/env_eyetracker.yml
@@ -6,19 +6,19 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - pip
   - cudatoolkit=10.1
   - matplotlib=3.3.2
   - numpy=1.19.2
   - pandas=1.1.3
-  - pip
   - python=3.8.5
   - python-mss=6.1.0
-  - pytorch=1.7.1
+  - pytorch::pytorch=1.7.1
   - pytorch-lightning=1.1.2
   - scikit-learn=0.23.2
   - scipy=1.5.2
-  - torchaudio=0.7.2
-  - torchvision=0.8.2
+  - pytorch::torchaudio=0.7.2
+  - pytorch::torchvision=0.8.2
   - tqdm=4.50.2
   - pip:
     - dlib==19.21.1
