--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ data_partial
 media/recordings
 trained_models/deploy.prototxt.txt
 trained_models/res10_300x300_ssd_iter_140000.caffemodel
-trained_models/shape_predictor_68_face_landmarks.dat
+trained_models/shape_predictor_*.dat
+trained_models/eyetracking_errors.npy
+trained_models/eyetracking_model.pt
 
 logs
 debug.log
